// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CdkLibrary Combined Configuration should handle both prettier and vscode configurations together 1`] = `
{
  "bracketSpacing": true,
  "overrides": [],
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`CdkLibrary Combined Configuration should handle both prettier and vscode configurations together 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true,
  "editor.indentSize": 2,
  "eslint.nodePath": "./node_modules",
  "eslint.useFlatConfig": false,
}
`;

exports[`CdkLibrary Combined Configuration should handle both prettier and vscode configurations together 3`] = `
{
  "recommendations": [
    "amazonwebservices.aws-toolkit-vscode",
    "DanielThielking.aws-cloudformation-yaml",
    "ms-azuretools.vscode-containers",
    "dbaeumer.vscode-eslint",
    "mhutchie.git-graph",
    "github.vscode-github-actions",
    "GitHub.vscode-pull-request-github",
    "eamodio.gitlens",
    "esbenp.prettier-vscode",
    "spmeesseman.vscode-taskexplorer",
    "wayou.vscode-todo-highlight",
    "vscode-icons-team.vscode-icons",
    "ms-vscode-remote.vscode-remote-extensionpack",
  ],
}
`;

exports[`CdkLibrary Commitzent Configuration should allow adding custom scopes to commitzent 1`] = `
"module.exports = {
  types: [
    {
      value: 'feat',
      name: 'feat:     A new feature'
    },
    {
      value: 'fix',
      name: 'fix:      A bug fix'
    },
    {
      value: 'docs',
      name: 'docs:     Documentation only changes'
    },
    {
      value: 'style',
      name: 'style:    Changes that do not affect the meaning of the code\\n' +
        '            (white-space, formatting, missing semi-colons, etc)'
    },
    {
      value: 'refactor',
      name: 'refactor: A code change that neither fixes a bug nor adds a feature'
    },
    {
      value: 'perf',
      name: 'perf:     A code change that improves performance'
    },
    {
      value: 'test',
      name: 'test:     Adding missing tests'
    },
    {
      value: 'chore',
      name: 'chore:    Changes to the build process or auxiliary tools\\n' +
        '            and libraries such as documentation generation'
    },
    {
      value: 'revert',
      name: 'revert:   Revert to a commit'
    },
    {
      value: 'WIP',
      name: 'WIP:      Work in progress'
    }
  ],
  scopes: [
    {
      name: 'projen'
    },
    {
      name: 'test'
    }
  ],
  usePreparedCommit: true,
  allowTicketNumber: false,
  isTicketNumberRequired: false,
  ticketNumberPrefix: 'TICKET-',
  ticketNumberRegExp: '\\\\d{1,5}',
  messages: {
    type: "Select the type of change that you're committing:",
    scope: '\\nDenote the SCOPE of this change (optional):',
    customScope: 'Denote the SCOPE of this change:',
    subject: 'Write a SHORT, IMPERATIVE tense description of the change:\\n',
    body: 'Provide a LONGER description of the change (optional). Use "|" to break new line:\\n',
    breaking: 'List any BREAKING CHANGES (optional):\\n',
    footer: 'List any ISSUES CLOSED by this change (optional). E.g.: #31, #34:\\n',
    confirmCommit: 'Are you sure you want to proceed with the commit above?'
  },
  allowCustomScopes: true,
  allowBreakingChanges: [
    'feat',
    'fix'
  ],
  subjectLimit: 100
}"
`;

exports[`CdkLibrary Commitzent Configuration should include commitzent dependencies by default 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "author": {
    "email": "test@example.com",
    "name": "test-author",
    "organization": false,
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk-lib": "2.1.0",
    "commit-and-tag-version": "^12",
    "commitizen": "*",
    "constructs": "10.0.5",
    "cz-customizable": "*",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "jsii": "~5.8.0",
    "jsii-diff": "*",
    "jsii-docgen": "^10.5.0",
    "jsii-pacmak": "*",
    "jsii-rosetta": "~5.8.0",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "jsii": {
    "outdir": "dist",
    "targets": {},
    "tsc": {
      "outDir": "lib",
      "rootDir": "src",
    },
  },
  "keywords": [
    "cdk",
  ],
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "test-cdk-library",
  "peerDependencies": {
    "aws-cdk-lib": "^2.1.0",
    "constructs": "^10.0.5",
  },
  "publishConfig": {
    "access": "public",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/test/test-cdk-library.git",
  },
  "scripts": {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "clobber": "npx projen clobber",
    "commit": "npx projen commit",
    "compat": "npx projen compat",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "docgen": "npx projen docgen",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "package-all": "npx projen package-all",
    "package:js": "npx projen package:js",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "release": "npx projen release",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "unbump": "npx projen unbump",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "stability": "stable",
  "types": "lib/index.d.ts",
  "version": "0.0.0",
}
`;

exports[`CdkLibrary Commitzent Configuration should include commitzent dependencies by default 2`] = `
"{
  "path": "node_modules/cz-customizable"
}"
`;

exports[`CdkLibrary Commitzent Configuration should include commitzent dependencies by default 3`] = `
"module.exports = {
  types: [
    {
      value: 'feat',
      name: 'feat:     A new feature'
    },
    {
      value: 'fix',
      name: 'fix:      A bug fix'
    },
    {
      value: 'docs',
      name: 'docs:     Documentation only changes'
    },
    {
      value: 'style',
      name: 'style:    Changes that do not affect the meaning of the code\\n' +
        '            (white-space, formatting, missing semi-colons, etc)'
    },
    {
      value: 'refactor',
      name: 'refactor: A code change that neither fixes a bug nor adds a feature'
    },
    {
      value: 'perf',
      name: 'perf:     A code change that improves performance'
    },
    {
      value: 'test',
      name: 'test:     Adding missing tests'
    },
    {
      value: 'chore',
      name: 'chore:    Changes to the build process or auxiliary tools\\n' +
        '            and libraries such as documentation generation'
    },
    {
      value: 'revert',
      name: 'revert:   Revert to a commit'
    },
    {
      value: 'WIP',
      name: 'WIP:      Work in progress'
    }
  ],
  scopes: [
    {
      name: 'projen'
    }
  ],
  usePreparedCommit: true,
  allowTicketNumber: false,
  isTicketNumberRequired: false,
  ticketNumberPrefix: 'TICKET-',
  ticketNumberRegExp: '\\\\d{1,5}',
  messages: {
    type: "Select the type of change that you're committing:",
    scope: '\\nDenote the SCOPE of this change (optional):',
    customScope: 'Denote the SCOPE of this change:',
    subject: 'Write a SHORT, IMPERATIVE tense description of the change:\\n',
    body: 'Provide a LONGER description of the change (optional). Use "|" to break new line:\\n',
    breaking: 'List any BREAKING CHANGES (optional):\\n',
    footer: 'List any ISSUES CLOSED by this change (optional). E.g.: #31, #34:\\n',
    confirmCommit: 'Are you sure you want to proceed with the commit above?'
  },
  allowCustomScopes: true,
  allowBreakingChanges: [
    'feat',
    'fix'
  ],
  subjectLimit: 100
}"
`;

exports[`CdkLibrary Commitzent Configuration should not include commitzent when disabled 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "author": {
    "email": "test@example.com",
    "name": "test-author",
    "organization": false,
  },
  "devDependencies": {
    "@types/jest": "*",
    "@types/node": "*",
    "@typescript-eslint/eslint-plugin": "^8",
    "@typescript-eslint/parser": "^8",
    "aws-cdk-lib": "2.1.0",
    "commit-and-tag-version": "^12",
    "constructs": "10.0.5",
    "eslint": "^9",
    "eslint-config-prettier": "*",
    "eslint-import-resolver-typescript": "*",
    "eslint-plugin-import": "*",
    "eslint-plugin-prettier": "*",
    "jest": "*",
    "jest-junit": "^16",
    "jsii": "~5.8.0",
    "jsii-diff": "*",
    "jsii-docgen": "^10.5.0",
    "jsii-pacmak": "*",
    "jsii-rosetta": "~5.8.0",
    "prettier": "*",
    "projen": "*",
    "ts-jest": "*",
    "typescript": "*",
  },
  "jest": {
    "clearMocks": true,
    "collectCoverage": true,
    "coverageDirectory": "coverage",
    "coveragePathIgnorePatterns": [
      "/node_modules/",
    ],
    "coverageProvider": "v8",
    "coverageReporters": [
      "json",
      "lcov",
      "clover",
      "cobertura",
      "text",
    ],
    "reporters": [
      "default",
      [
        "jest-junit",
        {
          "outputDirectory": "test-reports",
        },
      ],
    ],
    "testMatch": [
      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
    ],
    "testPathIgnorePatterns": [
      "/node_modules/",
    ],
    "transform": {
      "^.+\\.[t]sx?$": [
        "ts-jest",
        {
          "tsconfig": "tsconfig.dev.json",
        },
      ],
    },
    "watchPathIgnorePatterns": [
      "/node_modules/",
    ],
  },
  "jsii": {
    "outdir": "dist",
    "targets": {},
    "tsc": {
      "outDir": "lib",
      "rootDir": "src",
    },
  },
  "keywords": [
    "cdk",
  ],
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "test-cdk-library",
  "peerDependencies": {
    "aws-cdk-lib": "^2.1.0",
    "constructs": "^10.0.5",
  },
  "publishConfig": {
    "access": "public",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/test/test-cdk-library.git",
  },
  "scripts": {
    "build": "npx projen build",
    "bump": "npx projen bump",
    "clobber": "npx projen clobber",
    "compat": "npx projen compat",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "docgen": "npx projen docgen",
    "eject": "npx projen eject",
    "eslint": "npx projen eslint",
    "package": "npx projen package",
    "package-all": "npx projen package-all",
    "package:js": "npx projen package:js",
    "post-compile": "npx projen post-compile",
    "post-upgrade": "npx projen post-upgrade",
    "pre-compile": "npx projen pre-compile",
    "projen": "npx projen",
    "release": "npx projen release",
    "test": "npx projen test",
    "test:watch": "npx projen test:watch",
    "unbump": "npx projen unbump",
    "upgrade": "npx projen upgrade",
    "watch": "npx projen watch",
  },
  "stability": "stable",
  "types": "lib/index.d.ts",
  "version": "0.0.0",
}
`;

exports[`CdkLibrary Prettier Configuration should configure prettier with default options when not specified 1`] = `
{
  "bracketSpacing": true,
  "overrides": [],
  "semi": true,
  "singleQuote": true,
  "trailingComma": "all",
}
`;

exports[`CdkLibrary Prettier Configuration should preserve custom prettier options when provided 1`] = `
{
  "overrides": [],
  "semi": false,
  "singleQuote": false,
  "tabWidth": 4,
}
`;

exports[`CdkLibrary VSCode Configuration should configure VSCode settings and extensions by default 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true,
  "editor.indentSize": 2,
  "eslint.nodePath": "./node_modules",
  "eslint.useFlatConfig": false,
}
`;

exports[`CdkLibrary VSCode Configuration should configure VSCode settings and extensions by default 2`] = `
{
  "recommendations": [
    "amazonwebservices.aws-toolkit-vscode",
    "DanielThielking.aws-cloudformation-yaml",
    "ms-azuretools.vscode-containers",
    "dbaeumer.vscode-eslint",
    "mhutchie.git-graph",
    "github.vscode-github-actions",
    "GitHub.vscode-pull-request-github",
    "eamodio.gitlens",
    "esbenp.prettier-vscode",
    "spmeesseman.vscode-taskexplorer",
    "wayou.vscode-todo-highlight",
    "vscode-icons-team.vscode-icons",
    "ms-vscode-remote.vscode-remote-extensionpack",
  ],
}
`;

exports[`CdkLibrary VSCode Configuration should configure VSCode when explicitly set to true 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true,
  "editor.indentSize": 2,
  "eslint.nodePath": "./node_modules",
  "eslint.useFlatConfig": false,
}
`;

exports[`CdkLibrary VSCode Configuration should configure VSCode when explicitly set to true 2`] = `
{
  "recommendations": [
    "amazonwebservices.aws-toolkit-vscode",
    "DanielThielking.aws-cloudformation-yaml",
    "ms-azuretools.vscode-containers",
    "dbaeumer.vscode-eslint",
    "mhutchie.git-graph",
    "github.vscode-github-actions",
    "GitHub.vscode-pull-request-github",
    "eamodio.gitlens",
    "esbenp.prettier-vscode",
    "spmeesseman.vscode-taskexplorer",
    "wayou.vscode-todo-highlight",
    "vscode-icons-team.vscode-icons",
    "ms-vscode-remote.vscode-remote-extensionpack",
  ],
}
`;
